syntax = "proto3";

package driver.v1;
import "google/api/annotations.proto";

option go_package = "driver/api/driver/v1;s";

service Driver {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply){
        option (google.api.http) = {
			get: "/api/v1/GetVerifyCode",
		};
    };

	rpc SubmitPhone (SubmitPhoneRequest) returns (SubmitPhoneReply){
        option (google.api.http) = {
			post: "/api/v1/SubmitPhone",
			body:"*"
		};
    };

	rpc Login (LoginRequest) returns (LoginReply){
        option (google.api.http) = {
			post: "/api/v1/Login",
			body:"*"
		};
    };

	rpc Logout (LogoutRequest) returns (LogoutReply){
        option (google.api.http) = {
			post: "/api/v1/Logout",
			body:"*"
		};
    };
}

enum Type {
	DEFAULT = 0;
	DIGIT = 1;
	LETTER = 2;
	MIXED = 3;
}

message GetVerifyCodeRequest {
	int32 length = 1;
	Type type = 2;
}
message GetVerifyCodeReply {
    int32 code = 1;
    string message = 2;
}

message SubmitPhoneRequest {
    string phone = 1;
}
message SubmitPhoneReply {
	int64 code = 1;
    string message = 2;
	string status = 3;
}

message LoginRequest {
	string phone_number = 1;
	string verify_code = 2;
}
message LoginReply {
	int32 code = 1;
	string message = 2;
	string token = 3;
	int64 expire_time = 4;
}

message LogoutRequest {
}
message LogoutReply {
	int32 code = 1;
	string message = 2;
}